2002-05-28  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_memx.c (bk_memx_lop): Truncate a memx from the front.

2002-05-21  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_stdwrfun): Untested support for compression
	on write.
	(bk_ioh_stdio_init): Ioctl like function to set up stdio "extras"
	like compression, authentication, encryption.

2002-05-16  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c (do_net_init_af_inet_udp_listen): Enable
	creation of UDP server sockets, even if the IOH part doesn't work
	yet.

	* lib/b_getbyfoo.c (bk_gethostbyfoo): Correct comments and illegal
	arguments code for non-existance of ``*ih''

2002-05-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_write): No point in attempting to free data
	if data is NULL.
	(bk_ioh_coalesce): NULL termination not included in length

2002-05-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_atof): FLT_{MIN,MAX} work differently
	than INT_{MIN,MAX} - you need to use appropriately signed versions

2002-05-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_coalesce): BK_IOH_COALESCE_FLAG_TRAILING_NULL
	ensures coalesces into a valid string, suitlable for certain
	protocols.

	* lib/b_string.c (bk_mempbrk): strpbrk for vptrs (memory ranges)

2002-05-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_readallowed): When unblocking, attempt to
	see if there might be line-mode data queued up to go to the user,
	and schedule a job to deliver it at some later moment.
	(ioht_line_other): Don't deliver data to user if throttled
	(read-not-allowed).

	* include/libbk.h (BK_RUN_USERFLAG): Create user flags for the
	bk_fd_handler to allow users to call the function for their own
	purposes.

2002-04-25 Brian Lindauer <lindauer@sysd.com

	* lib/b_error.c: when flushing error queues, decrement queue count
	for each error removed.

2002-05-07  James Tanis  <jtt@winwood.sysdetect.com>
