@@ -1,3 +1,9 @@
+2002-05-30  Brian Lindauer  <lindauer@malkmus.sysdetect.com>
+
+	* lib/b_string.c (bk_vstr_cat): append routine that allocates more
+	memory as needed.
+	(bk_string_alloc_sprintf): fix inconsequential memory leak.
+
 2002-05-28  James Tanis  <jtt@saint.sysdetect.com>
 
 	* lib/b_memx.c (bk_memx_lop): Truncate a memx from the front.
